Fixed possible crash that could made button animations run on a dealloc’ed control. Test Modal VC to troubleshoot it.

--- a/FRDLivelyButtonDemo/FRDLivelyButtonDemo/Storyboard.storyboard
+++ b/FRDLivelyButtonDemo/FRDLivelyButtonDemo/Storyboard.storyboard
@@ -1,10 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="p8i-3l-B29">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="p8i-3l-B29">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
+        <!--Modal Test View Controller-->
+        <scene sceneID="DWD-TO-ztM">
+            <objects>
+                <viewController id="IbL-84-cly" customClass="ModalTestViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lyR-dc-uiI"/>
+                        <viewControllerLayoutGuide type="bottom" id="w53-Rs-R7K"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CMu-eL-XOk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This modal just to test there is no issue in button dealloc." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="hAT-zt-dhR">
+                                <rect key="frame" x="20" y="147" width="280" height="91"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="mXr-Iy-O5u"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aEO-eL-Xhr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1671" y="45"/>
+        </scene>
         <!--Test View Controller - FRDLivelyButton-->
         <scene sceneID="GY2-Mt-5Ni">
             <objects>
@@ -23,6 +51,9 @@
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="BZr-6K-Rl0" kind="modal" id="unC-hC-sVY"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MVJ-ex-Sx8" customClass="FRDLivelyButton">
                                 <rect key="frame" x="28" y="119" width="38" height="28"/>
@@ -181,6 +212,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t6e-Ho-kQp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="122" y="45"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="LN1-Xl-WsP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BZr-6K-Rl0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="OPz-NS-9Hr">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="IbL-84-cly" kind="relationship" relationship="rootViewController" id="DW8-zq-ruc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Me3-Mv-Ajn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1145" y="45"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
